# warren_bot

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  bot_config.template.info  club_info.json  club_info.template.json  club_stocks.csv  cyic_stocks.csv  dchat.py  humans.txt  pyproject.toml  requirements.txt  setup.py  slackchat.py  stock_report.py  terms_of_use.md  tox.ini  utilities.py
.do/: app.yml  deploy.yaml
.github/workflows/: build.yml  bumpversion.yml  codeql-analysis.yml  flake8.yml  pylint.yml  pytest.yml  test-and-build.properties.json  test-and-build.yml
src/tests/: IBM.balance_sheet.json  IBM.daily_adjusted.json  IBM.income_statement.json  test_alphavantage.py  test_analysis.py  test_portfolio_analysis.py  test_stock_analysis.py  test_utilites.py
src/warrenBot/: __init__.py  alphavantage.py  dchat.py  portfolio_analysis.py  report_template.2.1.0.html  stock_analysis.py  stock_report.py  utilities.py
src/warrenBot/resources/: report_template.2.1.0.html
src/warrenBot/tests/: IBM.company_overview.json  IBM.earnings.json  IBM.monthly_adjusted.json  __init__.py  test_alphavantage.py  test_analysis.py  test_stock_analysis.py  test_utilites.py
src/warren_bot/: __init__.py  __main__.py  alphavantage.py  analysis.py  logging_config.py  portfolio_analysis.py  stock_analysis.py  utilities.py
