[build-system]
requires = [
    "setuptools>=65.6.3",
    "wheel>=0.37.1",
    "build>=0.9.0",
    "bump2version>=1.0.1"
]
build-backend = "setuptools.build_meta"

[project]
name = "warren_bot"
version = "0.0.2"
description = "Investment Club chatbot"
readme = "README.md"
requires-python = "~=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "J.A. Simmons V", email = "simmonsj@jasimmonsv.com"},
]
# https://pypi.org/classifiers/
classifiers=[
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Development Status :: 2 - Pre-Alpha',
    'Operating System :: OS Independent',
    'Intended Audience :: Financial and Insurance Industry',
    'Topic :: Utilities',
    'Natural Language :: English',
    'Project-URL :: https://github.com/CyIC/warren'
]
dependencies=[
    "discord==2.3.1",
    "pandas==2.0.3",
    "requests==2.31.0",
    "scipy==1.11.1",
    "prettytable==3.8.0",
    "matplotlib==3.7.2",
    "jinja2==3.1.2",
    "mplfinance==0.12.9b7",
    "xhtml2pdf==0.2.8",
]

[project.urls]
"Homepage" = "https://github.com/CyIC/warren"
"Bug Tracker" = "https://github.com/CyIC/warren/issues"
"Changelog" = "https://github.com/CyIC/warren/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = [
    "pytest==7.2.0",
    "pytest-cov",
    "flake8"
]

[tool.pylint]
max-line-length = 120
# W0511: fixme tags
disable = ["W0511"]
