[tool.poetry]
name = "warren-bot"
version = "0.1.0"
description = "Investment club chatbot"
authors = ["JA Simmons V <simmonsj@redkeep.com>"]
license = "LICENSE.md"
readme = "README.md"
homepage = "https://github.com/CyIC/warren"
repository = "https://github.com/CyIC/warren"
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Development Status :: 2 - Pre-Alpha',
    'Operating System :: OS Independent',
    'Intended Audience :: Financial and Insurance Industry',
    'Topic :: Utilities',
    'Natural Language :: English',
    'Project-URL :: https://github.com/CyIC/warren'
]

[tool.poetry.dependencies]
python = "^3.11"
discord = "^2.3.2"
pandas = "^2.2.1"
requests = "^2.31.0"
scipy = "^1.12.0"
prettytable = "^3.10.0"
matplotlib = "^3.8.3"
jinja2 = "^3.1.3"
mplfinance = "^0.12.10b0"
xhtml2pdf = "^0.2.15"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
max-line-length = 120
# W0511: fixme tags
disable = ["W0511"]

