[tool.poetry]
name = "warren-bot"
version = "0.1.0"
description = "Investment club chatbot"
authors = ["JA Simmons V <simmonsj@redkeep.com>"]
license = "LICENSE.md"
readme = "README.md"
homepage = "https://github.com/CyIC/warren_bot"
repository = "https://github.com/CyIC/warren_bot"
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Development Status :: 2 - Pre-Alpha',
    'Operating System :: OS Independent',
    'Intended Audience :: Financial and Insurance Industry',
    'Topic :: Utilities',
    'Natural Language :: English',
    'Project-URL :: https://github.com/CyIC/warren_bot'
]

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.3.2"
pandas = "^2.2.1"
requests = "^2.31.0"
scipy = "^1.12.0"
prettytable = "^3.10.0"
matplotlib = "^3.8.3"
jinja2 = "^3.1.3"
mplfinance = "^0.12.10b0"
xhtml2pdf = "^0.2.15"
python-json-logger = "2.0.7"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
flake8 = "^7.0.0"
pylint = "^3.1.0"
pep8-naming = "^0.13.3"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
bump-my-version = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
max-line-length = 120

disable = [
    "W0511",  # to-do tags
    "C0209",  # consider-using-f-string
    "R0914",  # too-many-locals
    "R0915",  # too-many-statements
    "C0302",  # too-many-lines
]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(-(?P<build>\d+))?"
commit = true
tag = true
serialize = [
    "{major}.{minor}.{patch}-{build}",
    "{major}.{minor}.{patch}",
    ]

[tool.bumpversion.part.build]
independent = true

[tool.bumpversion.files]
filename = "README.md"
search = "v{current_version}"
replace = "v{new_version}"

[tool.bumpversion.files]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.bumpversion.files]
filename = "CHANGELOG.md"
search = "[Unreleased]"
replace = "[{new_version}] - {now:%Y-%m-%d}"
